password change and account deletion

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,10 +8,10 @@
 <body class="bg-dark bg-opacity-10">
 <th:block th:replace="/fragments/nav"></th:block>
 <div class="text-center my-5">
-    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">
+    <img src="https://res.cloudinary.com/dtzjbyjzq/image/upload/v1657223456/images/1-logo-v2_qqr2yo.png" alt="logo" width="300">
 </div>
 
-<div class="container py-5 h-100">
+<div class="container py-3 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
             <div class="card shadow-2-strong" style="border-radius: 1rem;">
