--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -2,8 +2,15 @@
     <!-- Container wrapper -->
     <div class="container">
         <!-- Navbar brand -->
-        <a class="navbar-brand me-2" href="/">
-            <h2 id="logo-main" class="mb-0" style="font-size: 16px;"><span id="logo-text" style="color: rgb(255, 255, 255);" contenteditable="true"><span  spellcheck="false" style="font-family: Nerko One;">musiCloud</span></span><span id="logo-icon" style="box-shadow: none !important; background-color: rgb(255, 120, 0); border-radius: 20%;"><i class="fas fa-cloud" style="color: rgb(238, 237, 237);"></i></span></h2>
+        <a class="navbar-brand" th:href="@{/}">
+            <img
+                    src="https://res.cloudinary.com/dtzjbyjzq/image/upload/v1657223443/images/2-logo-v2_bywto5.png"
+                    class="me-2"
+                    height="30"
+                    alt="MDB Logo"
+                    loading="lazy"
+            />
+            <small spellcheck="false">musiCloud</small>
         </a>
 
         <!-- Toggle button -->
