--- a/src/main/resources/templates/profile-details.html
+++ b/src/main/resources/templates/profile-details.html
@@ -40,28 +40,73 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-body p-4 text-black">
+                <div class="mx-4">
+                    <!-- Pills navs -->
+                    <ul class="nav nav-pills nav-fill mb-3" id="ex1" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <a
+                                    class="nav-link active"
+                                    id="ex2-tab-1"
+                                    data-mdb-toggle="pill"
+                                    href="#ex2-pills-1"
+                                    role="tab"
+                                    aria-controls="ex2-pills-1"
+                                    aria-selected="true"
+                            >Songs</a
+                            >
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a
+                                    class="nav-link"
+                                    id="ex2-tab-2"
+                                    data-mdb-toggle="pill"
+                                    href="#ex2-pills-2"
+                                    role="tab"
+                                    aria-controls="ex2-pills-2"
+                                    aria-selected="false"
+                            >Playlists</a
+                            >
+                        </li>
+                    </ul>
+                    <!-- Pills navs -->
 
-                    <div class="d-flex justify-content-between align-items-center mb-4">
-                        <p class="lead fw-normal mb-0">Playlists</p>
-                        <p class="mb-0"><a href="#!" class="text-muted">Show all</a></p>
+                    <!-- Pills content -->
+                    <div class="tab-content" id="ex2-content">
+                        <div
+                                class="tab-pane fade show active"
+                                id="ex2-pills-1"
+                                role="tabpanel"
+                                aria-labelledby="ex2-tab-1"
+                        >
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col" colspan="3">Name</th>
+                                    <th scope="col">Length</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+
+                                <tr th:each="song : ${userSongs}">
+                                    <th scope="row">1</th>
+                                    <td th:text="${song.title}">Mark</td>
+                                    <td>Otto</td>
+                                </tr>
+
+                                </tbody>
+                            </table>
+                        </div>
+                        <div
+                                class="tab-pane fade"
+                                id="ex2-pills-2"
+                                role="tabpanel"
+                                aria-labelledby="ex2-tab-2"
+                        >
+                            Tab 2 content
+                        </div>
                     </div>
-                    <div class="row g-2">
-                        <div class="col mb-2">
-                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp" alt="image 1" class="w-100 rounded-3">
-                        </div>
-                        <div class="col mb-2">
-                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(107).webp" alt="image 1" class="w-100 rounded-3">
-                        </div>
-                    </div>
-                    <div class="row g-2">
-                        <div class="col">
-                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(108).webp" alt="image 1" class="w-100 rounded-3">
-                        </div>
-                        <div class="col">
-                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(114).webp" alt="image 1" class="w-100 rounded-3">
-                        </div>
-                    </div>
+                    <!-- Pills content -->
                 </div>
             </div>
         </div>
