--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -42,6 +42,7 @@
           </div>
           <hr>
 
+          <button class="btn btn-primary btn-lg btn-block" type="button" data-mdb-toggle="modal" data-mdb-target="#confirmDeletion">Delete account</button>
         </div>
       </section>
     </div>
@@ -112,6 +113,33 @@
               Close
             </button>
             <button type="submit" class="btn btn-primary">Change email</button>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="modal top fade" id="confirmDeletion" tabindex="-1" aria-labelledby="confirmDeletion" aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
+  <div class="modal-dialog modal-lg ">
+    <div class="modal-content">
+      <div class="modal-body">
+        <form th:method="post" th:action="@{/settings/delete}">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteAccHeader">Delete account?</h5>
+            <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="form-outline mb-4">
+
+            <p>Are you sure you want to delete your account forever?</p>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">
+              Cancel
+            </button>
+            <button type="submit" class="btn btn-primary">Delete</button>
+          </div>
           </div>
         </form>
       </div>
