--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -48,7 +48,7 @@
                         <div class="invalid-feedback" th:if="${#fields.hasErrors('confirmPassword')}" th:text="${#fields.errors('confirmPassword').get(0)}">Error</div></div>
 
 
-                    <button class="btn btn-primary btn-lg btn-block" type="submit">Register</button>
+                    <button class="btn btn-primary btn-lg btn-block text-dark" type="submit" style="background-color: #ffac44;">Register</button>
                     </form>
                 </div>
             </div>
