--- a/src/main/resources/templates/profile-details.html
+++ b/src/main/resources/templates/profile-details.html
@@ -4,6 +4,11 @@
     <title>Profile - musiCloud</title>
     <th:block th:replace="/fragments/head"></th:block>
     <link rel="stylesheet" th:href="@{/css/img.upload.css}">
+    <style>
+    .nav-pills .nav-link.active {
+        background-color: #ffac44;
+    }
+</style>
 
 </head>
 <body class="bg-dark bg-opacity-10">
@@ -45,7 +50,7 @@
                     <ul class="nav nav-pills nav-fill mb-3" id="ex1" role="tablist">
                         <li class="nav-item" role="presentation">
                             <a
-                                    class="nav-link active"
+                                    class="nav-link active text-dark"
                                     id="ex2-tab-1"
                                     data-mdb-toggle="pill"
                                     href="#ex2-pills-1"
@@ -57,7 +62,7 @@
                         </li>
                         <li class="nav-item" role="presentation">
                             <a
-                                    class="nav-link"
+                                    class="nav-link text-dark"
                                     id="ex2-tab-2"
                                     data-mdb-toggle="pill"
                                     href="#ex2-pills-2"
@@ -158,11 +163,11 @@
                         <label class="form-label" for="form6Example4" style="margin-left: 0px;">Username</label>
                         <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 55.2px;"></div><div class="form-notch-trailing"></div></div></div>
                     <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">
+                    <button type="button" class="btn btn-light" data-mdb-dismiss="modal">
                         Close
                     </button>
 
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button type="submit" class="btn btn-primary text-dark" style="background-color: #ffac44;">Save changes</button>
                     </div>
                 </form>
                 </div>
