--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -42,7 +42,7 @@
           </div>
           <hr>
 
-          <button class="btn btn-primary btn-lg btn-block" type="button" data-mdb-toggle="modal" data-mdb-target="#confirmDeletion">Delete account</button>
+          <button class="btn btn-danger btn-lg btn-block" type="button" data-mdb-toggle="modal" data-mdb-target="#confirmDeletion">Delete account</button>
         </div>
       </section>
     </div>
@@ -82,10 +82,10 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">
+            <button type="button" class="btn btn-light" data-mdb-dismiss="modal">
               Close
             </button>
-            <button type="submit" class="btn btn-primary">Change password</button>
+            <button type="submit" class="btn btn-primary text-dark" style="background-color: #ffac44;">Change password</button>
           </div>
         </form>
       </div>
@@ -109,10 +109,10 @@
             <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 40px;"></div><div class="form-notch-trailing"></div></div></div>
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">
+            <button type="button" class="btn btn-light" data-mdb-dismiss="modal">
               Close
             </button>
-            <button type="submit" class="btn btn-primary">Change email</button>
+            <button type="submit" class="btn btn-primary text-dark" style="background-color: #ffac44;">Change email</button>
           </div>
         </form>
       </div>
@@ -135,10 +135,10 @@
             <p>Are you sure you want to delete your account forever?</p>
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">
+            <button type="button" class="btn btn-light" data-mdb-dismiss="modal">
               Cancel
             </button>
-            <button type="submit" class="btn btn-primary">Delete</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
           </div>
           </div>
         </form>
