--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -28,7 +28,7 @@
                             <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div>
                             <div class="invalid-feedback mb-2">Title is required!</div></div>
 
-                        <button class="btn btn-primary btn-lg btn-block" type="submit">Upload</button>
+                        <button class="btn btn-primary btn-lg btn-block" type="submit" style="background-color: #ffac44;">Upload</button>
                     </form>
                 </div>
             </div>
