--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,10 @@
 <body class="bg-dark bg-opacity-10">
 <th:block th:replace="/fragments/nav"></th:block>
 
+<div class="fixed-player">
+    <audio controls>
+        <source src="/media/epic.mp3" type="audio/mpeg">
+    </audio>
+</div>
 </body>
 </html>
