I have no idea what I am doing at this point

--- a/src/main/resources/templates/fragments/songlist.html
+++ b/src/main/resources/templates/fragments/songlist.html
@@ -5,21 +5,175 @@
 
 
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
 
 
 
     <link rel="stylesheet" href="/css/mdb.min.css"><script type="text/javascript" src="/js/mdb.min.js"></script>
 
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 
 </head>
 
 <body translate="no">
-<div class="column is-6 music-list">
-<ol><li class="music-list__item button is-trans is-fullwidth is-active"><span class="num">1</span><span class="icon is-small"><i class="fa fa-play fa-xs"></i></span><span class="music-list__title">Take Me to the Depths</span><span class="music-list__artist">Midnight North</span><span class="music-list__time">2:27</span></li><li class="music-list__item button is-trans is-fullwidth"><span class="num">2</span><span class="icon is-small"><i class="fa fa-play fa-xs"></i></span><span class="music-list__title">Images of Tomorrow</span><span class="music-list__artist">Unicorn Heads</span><span class="music-list__time">6:29</span></li><li class="music-list__item button is-trans is-fullwidth"><span class="num">3</span><span class="icon is-small"><i class="fa fa-play fa-xs"></i></span><span class="music-list__title">Family Montage</span><span class="music-list__artist">Biz Baz Studio</span><span class="music-list__time">2:05</span></li></ol>
+<section id="current">
+    <section>
+        <img src="https://img.discogs.com/dVuWG0JD254HlrRwEAYY4kiQ0Ys=/fit-in/600x600/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/R-7034291-1455617185-2934.jpeg.jpg" width="250px" height="250px">
+        <div id="playlist-details"><cite class="title">Blurryface</cite>
+            <address><a rel="artist">Twenty One Pilots</a></address>
+        </div>
+    </section>
+    <section>
+        <table id="current-playlist">
+            <thead>
+            <tr>
+                <th>
+                </th>
+                <th>Song</th>
+                <th>Artist</th>
+                <th></th>
+            </tr>
 
-</div>
+            </thead>
+            <tbody><tr class="song current" data-track-number="1" data-source="Heavydirtysoul.mp3">
+                <td><span class="track-number">1</span></td>
+                <td width="65%"><cite class="title">Heavydirtysoul</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="2" data-source="Stressed Out.mp3">
+                <td><span class="track-number">2</span></td>
+                <td width="65%"><cite class="title">Stressed Out</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="3" data-source="Ride.mp3">
+                <td><span class="track-number">3</span></td>
+                <td width="65%"><cite class="title">Ride</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="4" data-source="Fairly Local.mp3">
+                <td><span class="track-number">4</span></td>
+                <td width="65%"><cite class="title">Fairly Local</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="5" data-source="Tear in My Heart.mp3">
+                <td><span class="track-number">5</span></td>
+                <td width="65%"><cite class="title">Tear in My Heart</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="6" data-source="Lane Boy.mp3">
+                <td><span class="track-number">6</span></td>
+                <td width="65%"><cite class="title">Lane Boy</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="7" data-source="The Judge.mp3">
+                <td><span class="track-number">7</span></td>
+                <td width="65%"><cite class="title">The Judge</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="8" data-source="Doubt.mp3">
+                <td><span class="track-number">8</span></td>
+                <td width="65%"><cite class="title">Doubt</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="9" data-source="Polarize.mp3">
+                <td><span class="track-number">9</span></td>
+                <td width="65%"><cite class="title">Polarize</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="10" data-source="We Don't Believe What's On TV.mp3">
+                <td><span class="track-number">10</span></td>
+                <td width="65%"><cite class="title">We Don't Believe What's On TV</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="11" data-source="Message Man.mp3">
+                <td><span class="track-number">11</span></td>
+                <td width="65%"><cite class="title">Message Man</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="12" data-source="Hometown.mp3">
+                <td><span class="track-number">12</span></td>
+                <td width="65%"><cite class="title">Hometown</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="13" data-source="Not Today.mp3">
+                <td><span class="track-number">13</span></td>
+                <td width="65%"><cite class="title">Not Today</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            <tr class="song" data-track-number="14" data-source="Goner.mp3">
+                <td><span class="track-number">14</span></td>
+                <td width="65%"><cite class="title">Goner</cite></td>
+                <td width="35%">
+                    <address><a rel="artist">Twenty One Pilots</a></address>
+                </td>
+                <td><span class="runtime">0:00</span></td>
+            </tr>
+
+            </tbody></table>
+    </section>
+    <div id="controls-container">
+        <button id="prev-button" class="media-control-button"><i class="fa fa-step-backward"></i></button>
+        <button id="next-button" class="media-control-button"><i class="fa fa-step-forward"></i></button>
+        <audio src="music/Heavydirtysoul.mp3" controls="" id="currently-playing" data-track-number="1"></audio>
+        <button id="repeat-button" class="media-control-button"><i class="fa fa-repeat"></i></button>
+        <button id="shuffle-button" class="media-control-button" data-shuffle="0"><i class="fa fa-random"></i>
+        </button>
+        <audio muted="" id="next-track" data-track-number="NaN" src="music/undefined"></audio>
+        <audio muted="" id="previous-track" data-track-number="" src=""></audio>
+    </div>
+
+
+</section>
 </body></html>
