--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" th:href="@{/css/mdb.min.css}">
 <script type="text/javascript" th:src="@{/js/mdb.min.js}"></script>
-<!-- Font Awesome -->
+<link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css">
 <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
