--- a/src/main/resources/templates/fragments/player.html
+++ b/src/main/resources/templates/fragments/player.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="time">
-            <div class="current">0:00</div>
+            <div class="currentTime">0:00</div>
             <div class="divider">/</div>
             <div class="length">1:44</div>
         </div>
