separated liked and normal playlists

--- a/src/main/resources/templates/fragments/playlist.html
+++ b/src/main/resources/templates/fragments/playlist.html
@@ -14,12 +14,12 @@
     <section id="" class="">
         <section>
             <img src="https://img.discogs.com/dVuWG0JD254HlrRwEAYY4kiQ0Ys=/fit-in/600x600/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/R-7034291-1455617185-2934.jpeg.jpg" width="250px" height="250px">
-            <div id="playlist-details"><cite class="title">Blurryface</cite>
+            <div id="basePlaylist-details"><cite class="title">Blurryface</cite>
                 <address><a rel="artist">Twenty One Pilots</a></address>
             </div>
         </section>
         <section>
-            <table id="current-playlist">
+            <table id="current-basePlaylist">
                 <thead>
                 <tr>
                     <th>
