--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -6,6 +6,30 @@
 </head>
 <body class="bg-dark bg-opacity-10">
 <th:block th:replace="/fragments/nav"></th:block>
+<div class="bg-image"
+     style="background-image: url('https://res.cloudinary.com/dtzjbyjzq/image/upload/v1657773421/images/concert-2564242_1920_inexkv.jpg'); height: 94vh">
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+    <div class="container d-flex justify-content-center align-items-center" style="height: 80% !important;">
+        <div class="row pt-5 mt-3">
+            <div class="col-md-12 mb-3">
+                <div class="text-center">
+                    <h1 class="display-4 font-weight-bold mb-5 text-light" style="font-weight: bold;">Connect on musiCloud</h1>
+
+                    <h5 class="mb-5 text-light">Save tracks, follow artists and build playlists. All for free.</h5>
+                    <div>
+                        <a class="btn btn-purple mb-4 sitecolor text-light" th:href="@{/register}">Create account</a>
+                    </div>
+                    <div>
+                        <p class="text-light">Already have an account?<a class="btn bg-dark mx-2 text-light" style="vertical-align: middle;" th:href="@{/login}">Sign in</a></p>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
 
 </body>
 </html>
